<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/txt_lbl_app_title"
                android:textColor="@color/colorGrayDark"
                android:textSize="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPositionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/colorGray"
                android:textSize="32dp"
                app:layout_constraintEnd_toStartOf="@+id/txtSalaryAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="Barista" />

            <TextView
                android:id="@+id/txtSalaryAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/opensans_semibold"
                android:textSize="18dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtPositionTitle"
                tools:text="Rp 120,000" />

            <TextView
                android:id="@+id/txtClientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/opensans_semibold"
                app:layout_constraintEnd_toEndOf="@+id/txtPositionTitle"
                app:layout_constraintStart_toStartOf="@+id/txtPositionTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtPositionTitle"
                tools:text="Kaizen Coffee Co." />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/colorGray"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="@+id/txtSalaryAmount"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/txtSalaryAmount"
                app:layout_constraintTop_toBottomOf="@+id/txtSalaryAmount"
                tools:text="per Day" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="@+id/txtClientName"
                app:layout_constraintTop_toBottomOf="@+id/txtClientName"
                android:src="@drawable/location"/>

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="888 6-7 Thanon Ekkamai, Khwaeng Phra Khanong Nuea, Khet Watthana, Krung Thep Maha Nakhon 10110, Thailand" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/txtAddress"
                android:src="@drawable/manager" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/txt_lbl_locationManager"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV50"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txtManagerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txtAddress"
                app:layout_constraintStart_toStartOf="@+id/guidelineV50"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                tools:text="Yai Thong-oon" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:src="@drawable/contact" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/txt_lbl_contactNumber"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV50"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"/>

            <TextView
                android:id="@+id/txtContactNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="@+id/txtManagerName"
                app:layout_constraintStart_toStartOf="@+id/guidelineV50"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="Yai Thong-oon" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_lbl_clockedIn"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/txtClockInTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/txt_lbl_dash"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="08:00am" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/txt_lbl_clockedOut"
                android:textSize="14dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineV50"
                app:layout_constraintTop_toTopOf="@+id/textView6"/>

            <TextView
                android:id="@+id/txtClockOutTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:text="@string/txt_lbl_dash"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="08:00am" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineV50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/btnClockInOut"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/button_round_background"
                android:padding="10dp"
                android:text="@string/txt_lbl_clockedIn"
                android:textAllCaps="false"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV50"
                app:layout_constraintStart_toStartOf="@+id/guidelineV50"
                app:layout_constraintTop_toBottomOf="@+id/txtClockOutTime" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>